test/fail/binop-t.rnp
'hi' + 'hi';
---
TypeError: Expected number but got string
 --> fail/binop-t.rnp:1:1
  |
1 | 'hi' + 'hi';
  | ^^^^ Expected number but got string
  |
